--- a/.github/workflows/pagespeed.yml
+++ b/.github/workflows/pagespeed.yml
@@ -11,12 +11,12 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3  # Update to v3
+      uses: actions/checkout@v3  # This uses Node.js 20 now
 
     - name: Install Node.js
-      uses: actions/setup-node@v3  # Update to v3
+      uses: actions/setup-node@v3
       with:
-        node-version: '16'
+        node-version: '20'  # Explicitly set Node.js 20
 
     - name: Install Lighthouse
       run: npm install -g lighthouse
